--- a/src/components/W_Slider/WorkItem_New/WorkItemTitle/WorkitemTitleMobile.css
+++ b/src/components/W_Slider/WorkItem_New/WorkItemTitle/WorkitemTitleMobile.css
@@ -1,35 +1,34 @@
+.isMobileMode .workItemTitleLetter {
+  margin-top: 30px;
+}
+
 @media screen and (max-width: 550px) {
   .projectOrganizer .workItemTitleLetter {
     font-size: 60px;
-    margin-top: -30px;
   }
 }
 
 @media screen and (max-width: 500px) {
   .projectOrganizer .workItemTitleLetter {
     font-size: 50px;
-    margin-top: -30px;
   }
 }
 
 @media screen and (max-width: 400px) {
   .projectOrganizer .workItemTitleLetter {
     font-size: 45px;
-    margin-top: -20px;
   }
 }
 
 @media screen and (max-width: 350px) {
   .projectOrganizer .workItemTitleLetter {
     font-size: 38px;
-    margin-top: -10px;
   }
 }
 
 @media screen and (max-width: 300px) {
   .projectOrganizer .workItemTitleLetter {
     font-size: 34px;
-    margin-top: -5px;
   }
 }
 
@@ -68,10 +67,6 @@
 @media screen and (orientation: portrait) {
   .workItem_Min_Wrapper .titleAndSubheader {
     top: 0px;
-  }
-
-  .projectOrganizer.workItem_Min_Wrapper .titleAndSubheader {
-    /* top: -25px; */
   }
 
   .quizaWorkItemDiv.workItem_Min_Wrapper .titleAndSubheader {
